--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 services:
   nginx:
     container_name: bb-nginx
-    image: nginx:1.13
+    image: nginx:latest
     restart: always
     ports:
       - 80:80
